--- a/hands-on-quantum-machine-learning/1_binary_classification.ipynb
+++ b/hands-on-quantum-machine-learning/1_binary_classification.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMuHZzv2BNZnhi50Tr4qMu5",
+      "authorship_tag": "ABX9TyODvVxAQdcY5FAiQAJ03EuG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -110,7 +110,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "V0w3YlciobB2",
-        "outputId": "4a0701bb-3037-4972-d317-ae016b190ddf"
+        "outputId": "37fc58bf-35bf-47c9-a5e7-e2b08ab347e3"
       },
       "execution_count": 2,
       "outputs": [
@@ -152,7 +152,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3yMWZFgLogin",
-        "outputId": "a4c3f570-a727-4ae4-8ef6-40f465c2a650"
+        "outputId": "806f3f7d-2032-47a6-f5b5-8fb5bce5f9e6"
       },
       "execution_count": 4,
       "outputs": [
@@ -162,7 +162,7 @@
           "text": [
             "Downloading titanic.zip to /content\n",
             "\r  0% 0.00/34.1k [00:00<?, ?B/s]\n",
-            "\r100% 34.1k/34.1k [00:00<00:00, 1.92MB/s]\n"
+            "\r100% 34.1k/34.1k [00:00<00:00, 46.0MB/s]\n"
           ]
         },
         {
@@ -200,7 +200,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XNTMWRXwm_fC",
-        "outputId": "1770bc0c-57bf-4a27-fe3c-f26797f6f33b"
+        "outputId": "434a3aa8-8711-4a7b-ad00-2273b02c71ad"
       },
       "execution_count": 5,
       "outputs": [
@@ -225,7 +225,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "aYcanNH9p0Y_",
-        "outputId": "07a1923f-19db-44a3-dd7a-9f6b9a314429"
+        "outputId": "444729a8-b68f-4c50-c3f5-6016bac5aef8"
       },
       "execution_count": 6,
       "outputs": [
@@ -267,7 +267,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "hwkdBg36p8rf",
-        "outputId": "54ec1ba3-97f9-44ae-ce12-88bb1cf5d702"
+        "outputId": "7fae78c4-ddaa-4f0f-c074-550b26fa299e"
       },
       "execution_count": 7,
       "outputs": [
@@ -309,7 +309,7 @@
           "height": 548
         },
         "id": "BXMc0GSkqCbs",
-        "outputId": "5245b4fb-3f4a-4686-8fa1-78b5e1c0d43d"
+        "outputId": "30961771-509c-4676-b024-53067d6b4ee0"
       },
       "execution_count": 8,
       "outputs": [
@@ -340,7 +340,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-e485d0ae-f983-48d8-a561-6d3acb89646e\">\n",
+              "  <div id=\"df-92a2f777-7e2b-4f4d-984a-ae7e0619ec93\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -453,7 +453,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-e485d0ae-f983-48d8-a561-6d3acb89646e')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-92a2f777-7e2b-4f4d-984a-ae7e0619ec93')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -504,12 +504,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-e485d0ae-f983-48d8-a561-6d3acb89646e button.colab-df-convert');\n",
+              "          document.querySelector('#df-92a2f777-7e2b-4f4d-984a-ae7e0619ec93 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-e485d0ae-f983-48d8-a561-6d3acb89646e');\n",
+              "          const element = document.querySelector('#df-92a2f777-7e2b-4f4d-984a-ae7e0619ec93');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -581,12 +581,12 @@
       ],
       "metadata": {
         "id": "AZBv1MAKqJRA",
-        "outputId": "3a9672b4-7dde-4ae6-a5bf-5a6a5ff1440a",
+        "outputId": "36aa518a-d4cd-45b5-a2a6-c6f143b5936c",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 10,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -633,12 +633,12 @@
       ],
       "metadata": {
         "id": "oNAm14wXZAas",
-        "outputId": "7d9051ae-8589-45bc-aed0-24a9764110de",
+        "outputId": "a761b98c-e78a-4207-bb2d-d4c83f806f09",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 12,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -663,12 +663,12 @@
       ],
       "metadata": {
         "id": "_NQAs48Tab7B",
-        "outputId": "d7b7daa9-0d12-426c-fba3-5807fc930823",
+        "outputId": "ee857a17-5393-4f00-abab-063914a3e139",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 13,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -715,13 +715,13 @@
       ],
       "metadata": {
         "id": "7xFV7ZbZbLi6",
-        "outputId": "8e7b10d7-1fa4-490f-9fae-f728fd658684",
+        "outputId": "551e3520-5a9e-4ff3-b13f-b34b237616c2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
         }
       },
-      "execution_count": 15,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -736,7 +736,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-460164a5-f67a-4dd0-9704-1237a4addad4\">\n",
+              "  <div id=\"df-6d3c7e5d-4532-481e-ac75-2dfaaf755c71\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -825,7 +825,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-460164a5-f67a-4dd0-9704-1237a4addad4')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-6d3c7e5d-4532-481e-ac75-2dfaaf755c71')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -876,12 +876,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-460164a5-f67a-4dd0-9704-1237a4addad4 button.colab-df-convert');\n",
+              "          document.querySelector('#df-6d3c7e5d-4532-481e-ac75-2dfaaf755c71 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-460164a5-f67a-4dd0-9704-1237a4addad4');\n",
+              "          const element = document.querySelector('#df-6d3c7e5d-4532-481e-ac75-2dfaaf755c71');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -904,7 +904,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 15
+          "execution_count": 12
         }
       ]
     },
@@ -919,9 +919,143 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "# The maximum values\n",
+        "# check the maximum value in a column\n",
+        "print(f\"The maximum age is {train['Age'].max()}\")\n",
+        "print(f\"The maximum fare is {train['Fare'].max()}\")"
+      ],
+      "metadata": {
+        "id": "OZbvug7pcJ5h",
+        "outputId": "0da4bb37-424c-49df-98c5-314cf814eca9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The maximum age is 80.0\n",
+            "The maximum fare is 512.3292\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Normalization of the data\n",
+        "scaler = MinMaxScaler()\n",
+        "# fit and transform the train set\n",
+        "scaler.fit(train)\n",
+        "train = scaler.transform(train)\n",
+        "\n",
+        "print(f\"The minimum value is {train.min()} and the maximum value is {train.max()}\")"
+      ],
+      "metadata": {
+        "id": "RVDoYIvxTr4K",
+        "outputId": "22a7ebc1-1c6e-486f-ff12-e278f23a7670",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The minimum value is 0.0 and the maximum value is 1.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Training and Testing data split"
+      ],
+      "metadata": {
+        "id": "qDexjFz7VM2x"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Separating input from labels and training from testing sets\n",
+        "input_data = train[:, 1:8]\n",
+        "labels = train[:, 0]\n",
+        "\n",
+        "train_input, test_input, train_labels, test_labels = train_test_split(input_data, labels, test_size=0.2)\n",
+        "\n",
+        "print(f\"We have {train_input.shape[0]} training and {test_input.shape[0]} testing rows\")\n",
+        "print(f\"There are {train_input.shape[1]} input columns\")"
+      ],
+      "metadata": {
+        "id": "o6QflLTZVRFi",
+        "outputId": "e42d28c5-84c5-4229-8434-d07c1fe41cfc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "We have 711 training and 178 testing rows\n",
+            "There are 7 input columns\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!mkdir data"
+      ],
+      "metadata": {
+        "id": "zHb8BY6vWlI9"
+      },
+      "execution_count": 16,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Save the data to the filesystem\n",
+        "with open(\"data/train.npy\", \"wb\") as f:\n",
+        "  np.save(f, train_input)\n",
+        "  np.save(f, train_labels)\n",
+        "\n",
+        "with open(\"data/test.npy\", \"wb\") as f:\n",
+        "  np.save(f, test_input)\n",
+        "  np.save(f, test_labels)"
+      ],
+      "metadata": {
+        "id": "UUno5FmgWgMM"
+      },
+      "execution_count": 17,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Baseline"
+      ],
+      "metadata": {
+        "id": "9m29U8JJXLkY"
+      }
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "OZbvug7pcJ5h"
+        "id": "VF38btCWXMSk"
       },
       "execution_count": null,
       "outputs": []
