--- a/hands-on-quantum-machine-learning/1_binary_classification.ipynb
+++ b/hands-on-quantum-machine-learning/1_binary_classification.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyODvVxAQdcY5FAiQAJ03EuG",
+      "authorship_tag": "ABX9TyPhdT25WNCZ0pW12WEqJmlz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -110,7 +110,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "V0w3YlciobB2",
-        "outputId": "37fc58bf-35bf-47c9-a5e7-e2b08ab347e3"
+        "outputId": "f0b2cf78-2db2-47da-fa7f-d4d0f5ff6966"
       },
       "execution_count": 2,
       "outputs": [
@@ -148,32 +148,10 @@
         "rm -rf titanic.zip"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "3yMWZFgLogin",
-        "outputId": "806f3f7d-2032-47a6-f5b5-8fb5bce5f9e6"
+        "id": "3yMWZFgLogin"
       },
-      "execution_count": 4,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Downloading titanic.zip to /content\n",
-            "\r  0% 0.00/34.1k [00:00<?, ?B/s]\n",
-            "\r100% 34.1k/34.1k [00:00<00:00, 46.0MB/s]\n"
-          ]
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": []
-          },
-          "metadata": {},
-          "execution_count": 4
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -200,7 +178,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XNTMWRXwm_fC",
-        "outputId": "434a3aa8-8711-4a7b-ad00-2273b02c71ad"
+        "outputId": "95c872dc-42ff-4a3f-87c7-39a1995cccd2"
       },
       "execution_count": 5,
       "outputs": [
@@ -225,7 +203,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "aYcanNH9p0Y_",
-        "outputId": "444729a8-b68f-4c50-c3f5-6016bac5aef8"
+        "outputId": "fab90d9f-0ae8-4459-8678-294b61ea644a"
       },
       "execution_count": 6,
       "outputs": [
@@ -267,7 +245,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "hwkdBg36p8rf",
-        "outputId": "7fae78c4-ddaa-4f0f-c074-550b26fa299e"
+        "outputId": "f688823c-7ae4-4f92-f9e2-af95c46a96b1"
       },
       "execution_count": 7,
       "outputs": [
@@ -309,7 +287,7 @@
           "height": 548
         },
         "id": "BXMc0GSkqCbs",
-        "outputId": "30961771-509c-4676-b024-53067d6b4ee0"
+        "outputId": "e760f74b-5785-4dee-a8d4-38ebc01a9fc2"
       },
       "execution_count": 8,
       "outputs": [
@@ -340,7 +318,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-92a2f777-7e2b-4f4d-984a-ae7e0619ec93\">\n",
+              "  <div id=\"df-8c4d1d53-1203-41f1-941f-26e1a91b98f6\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -453,7 +431,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-92a2f777-7e2b-4f4d-984a-ae7e0619ec93')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-8c4d1d53-1203-41f1-941f-26e1a91b98f6')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -504,12 +482,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-92a2f777-7e2b-4f4d-984a-ae7e0619ec93 button.colab-df-convert');\n",
+              "          document.querySelector('#df-8c4d1d53-1203-41f1-941f-26e1a91b98f6 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-92a2f777-7e2b-4f4d-984a-ae7e0619ec93');\n",
+              "          const element = document.querySelector('#df-8c4d1d53-1203-41f1-941f-26e1a91b98f6');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -581,7 +559,7 @@
       ],
       "metadata": {
         "id": "AZBv1MAKqJRA",
-        "outputId": "36aa518a-d4cd-45b5-a2a6-c6f143b5936c",
+        "outputId": "f97b4d3f-f33f-4001-9de8-d9cafc0c3399",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -633,7 +611,7 @@
       ],
       "metadata": {
         "id": "oNAm14wXZAas",
-        "outputId": "a761b98c-e78a-4207-bb2d-d4c83f806f09",
+        "outputId": "933f098d-0d55-4540-938f-2af8072061c8",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -663,7 +641,7 @@
       ],
       "metadata": {
         "id": "_NQAs48Tab7B",
-        "outputId": "ee857a17-5393-4f00-abab-063914a3e139",
+        "outputId": "c4c2ff51-84d5-4cd3-d68e-3f53b84b8e99",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -715,7 +693,7 @@
       ],
       "metadata": {
         "id": "7xFV7ZbZbLi6",
-        "outputId": "551e3520-5a9e-4ff3-b13f-b34b237616c2",
+        "outputId": "8733eee6-1dce-4f04-c416-1ad3eec8dd87",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
@@ -736,7 +714,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-6d3c7e5d-4532-481e-ac75-2dfaaf755c71\">\n",
+              "  <div id=\"df-aed086c9-6afc-4fe5-b137-3c810c5aba91\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -825,7 +803,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-6d3c7e5d-4532-481e-ac75-2dfaaf755c71')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-aed086c9-6afc-4fe5-b137-3c810c5aba91')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -876,12 +854,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-6d3c7e5d-4532-481e-ac75-2dfaaf755c71 button.colab-df-convert');\n",
+              "          document.querySelector('#df-aed086c9-6afc-4fe5-b137-3c810c5aba91 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-6d3c7e5d-4532-481e-ac75-2dfaaf755c71');\n",
+              "          const element = document.querySelector('#df-aed086c9-6afc-4fe5-b137-3c810c5aba91');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -927,7 +905,7 @@
       ],
       "metadata": {
         "id": "OZbvug7pcJ5h",
-        "outputId": "0da4bb37-424c-49df-98c5-314cf814eca9",
+        "outputId": "458bb162-3d14-4493-bdfe-2d0a1fc8af40",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -957,7 +935,7 @@
       ],
       "metadata": {
         "id": "RVDoYIvxTr4K",
-        "outputId": "22a7ebc1-1c6e-486f-ff12-e278f23a7670",
+        "outputId": "4f640361-8c42-4c95-8f32-24a6e9d196fd",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -996,7 +974,7 @@
       ],
       "metadata": {
         "id": "o6QflLTZVRFi",
-        "outputId": "e42d28c5-84c5-4229-8434-d07c1fe41cfc",
+        "outputId": "96535d49-4e08-4ff3-cddd-d94223678fb7",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1053,9 +1031,123 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# A random classifier\n",
+        "random.seed(a=None, version=2)\n",
+        "\n",
+        "def classify(passenger):\n",
+        "  # just returns either 0 or 1 as output\n",
+        "  return random.randint(0, 1)"
+      ],
       "metadata": {
         "id": "VF38btCWXMSk"
+      },
+      "execution_count": 18,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# The classification runner\n",
+        "def run(f_classifier, x):\n",
+        "  return list(map(f_classifier, x))"
+      ],
+      "metadata": {
+        "id": "bXZMgxZHc04J"
+      },
+      "execution_count": 19,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Let’s run it\n",
+        "result = run(classify, train_input)"
+      ],
+      "metadata": {
+        "id": "12lL6eO9dTZf"
+      },
+      "execution_count": 22,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Evaluate the classifier\n",
+        "def evaluate(predictions, actual):\n",
+        "  correct = list(filter(lambda x: x[0] == x[1], list(zip(predictions, actual))))\n",
+        "  return f\"{len(correct)} correct predictions out of {len(actual)}. Accuracy {100 * len(correct) / len(actual):.2f}%\""
+      ],
+      "metadata": {
+        "id": "Zs-QcNbjd0yb"
+      },
+      "execution_count": 26,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(evaluate(run(classify, train_input), train_labels))"
+      ],
+      "metadata": {
+        "id": "SbDVOfpLeiBg",
+        "outputId": "72a49e79-4391-41d4-b542-1a91232982ca",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "343 correct predictions out of 711. Accuracy 48.24%\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Always predict a passenger died\n",
+        "def predict_death(item):\n",
+        "  return 0\n",
+        "\n",
+        "print(evaluate(run(predict_death, train_input), train_labels))"
+      ],
+      "metadata": {
+        "id": "bt7lZDIAfOMs",
+        "outputId": "4a98179a-b0cd-46b9-c4d2-8fcd6a7a2fd0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "442 correct predictions out of 711. Accuracy 62.17%\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Model Evaluation"
+      ],
+      "metadata": {
+        "id": "PDmaqRctf120"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "SJ-Uzakjf5Tl"
       },
       "execution_count": null,
       "outputs": []
