--- a/hands-on-machine-learning-with-scikit-learn-keras-and-tensorflow/7-ensemble-learning/00_ensemble_learning_basic.ipynb
+++ b/hands-on-machine-learning-with-scikit-learn-keras-and-tensorflow/7-ensemble-learning/00_ensemble_learning_basic.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNhN3vFcDZvAwJOMGNDumlE",
+      "authorship_tag": "ABX9TyMNaoJmuxStvC10UPRnzJmF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +30,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "##Decision Trees Exercises"
+        "##Ensemble Learning Basic"
       ],
       "metadata": {
         "id": "hGwZeZjukAa8"
@@ -97,13 +97,13 @@
       "metadata": {
         "id": "UemV2I_DkudS"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "##Exercise-1: Train and fine-tune a Decision Tree"
+        "##Random forest fundamental"
       ],
       "metadata": {
         "id": "_EOoLe53k__H"
@@ -112,16 +112,20 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Train and fine-tune a Decision Tree for the moons dataset by following these\n",
-        "steps:\n",
+        "Let's grow a forest by following these steps:\n",
         "\n",
-        "1. Use `make_moons(n_samples=10000, noise=0.4)` to generate a moons dataset.\n",
-        "2. Use `train_test_split()` to split the dataset into a training set and a test set.\n",
-        "3. Use grid search with `cross-validation` (with the help of the `GridSearchCV` class) to find good hyperparameter values for a `DecisionTreeClassifier`. Hint: try various values for `max_leaf_nodes`.\n",
-        "4. Train it on the full training set using these hyperparameters, and measure\n",
-        "your model’s performance on the test set. You should get roughly 85% to 87%\n",
+        "1. Generate 1,000 subsets of the training set,\n",
+        "each containing 100 instances selected randomly. Hint: you can use Scikit-\n",
+        "Learn’s `ShuffleSplit` class for this.\n",
+        "2. Train one Decision Tree on each subset, using the best hyperparameter values\n",
+        "found in the previous exercise. Evaluate these 1,000 Decision Trees on the test\n",
+        "set. Since they were trained on smaller sets, these Decision Trees will likely\n",
+        "perform worse than the first Decision Tree, achieving only about 80%\n",
         "accuracy.\n",
-        "\n"
+        "3. Now comes the magic. For each test set instance, generate the predictions of the 1,000 Decision Trees, and keep only the most frequent prediction (you can use SciPy’s `mode()` function for this). This approach gives you majority-vote predictions over the test set.\n",
+        "4. Evaluate these predictions on the test set: you should obtain a slightly higher accuracy than your first model (about 0.5 to 1.5% higher). \n",
+        "\n",
+        "Congratulations, you have trained a Random Forest classifier!"
       ],
       "metadata": {
         "id": "WK_n8GYslAHA"
@@ -155,7 +159,7 @@
       "metadata": {
         "id": "dWfgtnASlEDt"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -184,7 +188,7 @@
       "metadata": {
         "id": "FuPlzH3kl3L0"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -217,12 +221,12 @@
       ],
       "metadata": {
         "id": "aLWy_ZP3mirH",
-        "outputId": "ab2e6a51-11fb-4ff1-a34f-2c32a558416d",
+        "outputId": "10392ae3-855a-498d-e89e-8d7fa0585d48",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -278,89 +282,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "###Step-4: Running full training using best hyperparameters"
-      ],
-      "metadata": {
-        "id": "LjkeYndKoxJk"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Let's train it on the full training set using these hyperparameters, and measure your model's performance on the test set. \n",
-        "\n",
-        "You should get roughly 85% to 87% accuracy.\n",
-        "\n",
-        "By default, `GridSearchCV` trains the best model found on the whole training set (you can change this by setting `refit=False`), so we don't need to do it again. \n",
-        "\n",
-        "We can simply evaluate the model's accuracy:"
-      ],
-      "metadata": {
-        "id": "hXni5RHmo26S"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "y_pred = grid_search_cv.predict(x_test)\n",
-        "accuracy_score(y_test, y_pred)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "ixSErJx1o7w1",
-        "outputId": "d78711fc-f112-489d-c3ae-2b39178fc8ab"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "0.8695"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 10
-        }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "##Exercise-2: Implement Random forest fundamental"
-      ],
-      "metadata": {
-        "id": "Om7TZr63m9Ys"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Let's grow a forest by following these steps:\n",
-        "\n",
-        "1. Generate 1,000 subsets of the training set,\n",
-        "each containing 100 instances selected randomly. Hint: you can use Scikit-\n",
-        "Learn’s `ShuffleSplit` class for this.\n",
-        "2. Train one Decision Tree on each subset, using the best hyperparameter values\n",
-        "found in the previous exercise. Evaluate these 1,000 Decision Trees on the test\n",
-        "set. Since they were trained on smaller sets, these Decision Trees will likely\n",
-        "perform worse than the first Decision Tree, achieving only about 80%\n",
-        "accuracy.\n",
-        "3. Now comes the magic. For each test set instance, generate the predictions of the 1,000 Decision Trees, and keep only the most frequent prediction (you can use SciPy’s `mode()` function for this). This approach gives you majority-vote predictions over the test set.\n",
-        "4. Evaluate these predictions on the test set: you should obtain a slightly higher accuracy than your first model (about 0.5 to 1.5% higher). \n",
-        "\n",
-        "Congratulations, you have trained a Random Forest classifier!"
-      ],
-      "metadata": {
-        "id": "PHOso1bMm-Vp"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "###Step-1: Generate dataset"
+        "###Step-4: Shuffle dataset"
       ],
       "metadata": {
         "id": "gOzo_gVIrjeg"
@@ -395,13 +317,13 @@
       "metadata": {
         "id": "CxQeDOo9p3nL"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "###Step-2: Train one Decision Tree"
+        "###Step-5: Train one Decision Tree"
       ],
       "metadata": {
         "id": "YAZw3z4ysjcd"
@@ -435,12 +357,12 @@
       ],
       "metadata": {
         "id": "wIDqSxjpqAaQ",
-        "outputId": "0359e9b7-7d05-47ce-af44-2aafa9952bc3",
+        "outputId": "6977636f-c7d7-4f71-b393-955d9d1e45fc",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -450,14 +372,14 @@
             ]
           },
           "metadata": {},
-          "execution_count": 15
+          "execution_count": 7
         }
       ]
     },
     {
       "cell_type": "markdown",
       "source": [
-        "###Step-3: Make prediction on 1,000 Decision Trees"
+        "###Step-6: Make prediction on 1,000 Decision Trees"
       ],
       "metadata": {
         "id": "5zHHjXp1tsb_"
@@ -485,7 +407,7 @@
       "metadata": {
         "id": "rEiR4UENqIH5"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -496,13 +418,13 @@
       "metadata": {
         "id": "CSr5rJgjqLvo"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "###Step-4: Evaluate these predictions"
+        "###Step-7: Evaluate these predictions"
       ],
       "metadata": {
         "id": "p_Wmj5z6qkz2"
@@ -524,12 +446,12 @@
       ],
       "metadata": {
         "id": "TEkNzNDVrDAZ",
-        "outputId": "41373e30-5da7-4ed0-cd41-c21c714db69e",
+        "outputId": "3cbbf4e7-7667-463c-d8b3-24a3c07ac58e",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -539,7 +461,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 19
+          "execution_count": 10
         }
       ]
     },
