--- a/hands-on-quantum-machine-learning/1_binary_classification.ipynb
+++ b/hands-on-quantum-machine-learning/1_binary_classification.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPhdT25WNCZ0pW12WEqJmlz",
+      "authorship_tag": "ABX9TyOUdhUNvPGdajK50F3WF7aO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -110,7 +110,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "V0w3YlciobB2",
-        "outputId": "f0b2cf78-2db2-47da-fa7f-d4d0f5ff6966"
+        "outputId": "fb387a25-79a2-4ded-e444-e903444687f4"
       },
       "execution_count": 2,
       "outputs": [
@@ -178,7 +178,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XNTMWRXwm_fC",
-        "outputId": "95c872dc-42ff-4a3f-87c7-39a1995cccd2"
+        "outputId": "8a201b7b-f9a2-4570-f2b7-fbf1f55bf9c7"
       },
       "execution_count": 5,
       "outputs": [
@@ -203,7 +203,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "aYcanNH9p0Y_",
-        "outputId": "fab90d9f-0ae8-4459-8678-294b61ea644a"
+        "outputId": "b73e671f-b8db-4ac4-b7fa-7334e8cb0659"
       },
       "execution_count": 6,
       "outputs": [
@@ -245,7 +245,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "hwkdBg36p8rf",
-        "outputId": "f688823c-7ae4-4f92-f9e2-af95c46a96b1"
+        "outputId": "8715a50f-c475-4dbe-dcc6-b86e0c5bcd3f"
       },
       "execution_count": 7,
       "outputs": [
@@ -287,7 +287,7 @@
           "height": 548
         },
         "id": "BXMc0GSkqCbs",
-        "outputId": "e760f74b-5785-4dee-a8d4-38ebc01a9fc2"
+        "outputId": "98c503cb-e865-406e-f72d-2a8630000a9e"
       },
       "execution_count": 8,
       "outputs": [
@@ -318,7 +318,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-8c4d1d53-1203-41f1-941f-26e1a91b98f6\">\n",
+              "  <div id=\"df-c21ec929-7086-4fbb-b4b4-ad4062760baa\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -431,7 +431,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-8c4d1d53-1203-41f1-941f-26e1a91b98f6')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-c21ec929-7086-4fbb-b4b4-ad4062760baa')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -482,12 +482,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-8c4d1d53-1203-41f1-941f-26e1a91b98f6 button.colab-df-convert');\n",
+              "          document.querySelector('#df-c21ec929-7086-4fbb-b4b4-ad4062760baa button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-8c4d1d53-1203-41f1-941f-26e1a91b98f6');\n",
+              "          const element = document.querySelector('#df-c21ec929-7086-4fbb-b4b4-ad4062760baa');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -559,7 +559,7 @@
       ],
       "metadata": {
         "id": "AZBv1MAKqJRA",
-        "outputId": "f97b4d3f-f33f-4001-9de8-d9cafc0c3399",
+        "outputId": "32e235b5-3460-4ae0-dc0e-8e885d0e6e15",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -611,7 +611,7 @@
       ],
       "metadata": {
         "id": "oNAm14wXZAas",
-        "outputId": "933f098d-0d55-4540-938f-2af8072061c8",
+        "outputId": "56114aef-e04a-49c7-9fde-0a85692935d7",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -641,7 +641,7 @@
       ],
       "metadata": {
         "id": "_NQAs48Tab7B",
-        "outputId": "c4c2ff51-84d5-4cd3-d68e-3f53b84b8e99",
+        "outputId": "d3924105-3604-45e2-b80e-0228307e4df6",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -693,7 +693,7 @@
       ],
       "metadata": {
         "id": "7xFV7ZbZbLi6",
-        "outputId": "8733eee6-1dce-4f04-c416-1ad3eec8dd87",
+        "outputId": "f5ef97d8-d00d-411e-f524-600a1d0872b7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
@@ -714,7 +714,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-aed086c9-6afc-4fe5-b137-3c810c5aba91\">\n",
+              "  <div id=\"df-f356ebed-492e-4b63-93f0-657a2ce34e50\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -803,7 +803,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-aed086c9-6afc-4fe5-b137-3c810c5aba91')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-f356ebed-492e-4b63-93f0-657a2ce34e50')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -854,12 +854,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-aed086c9-6afc-4fe5-b137-3c810c5aba91 button.colab-df-convert');\n",
+              "          document.querySelector('#df-f356ebed-492e-4b63-93f0-657a2ce34e50 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-aed086c9-6afc-4fe5-b137-3c810c5aba91');\n",
+              "          const element = document.querySelector('#df-f356ebed-492e-4b63-93f0-657a2ce34e50');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -905,7 +905,7 @@
       ],
       "metadata": {
         "id": "OZbvug7pcJ5h",
-        "outputId": "458bb162-3d14-4493-bdfe-2d0a1fc8af40",
+        "outputId": "3857e0ef-3e19-4b80-dd5f-f8495d1bbc55",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -935,7 +935,7 @@
       ],
       "metadata": {
         "id": "RVDoYIvxTr4K",
-        "outputId": "4f640361-8c42-4c95-8f32-24a6e9d196fd",
+        "outputId": "9b01f34a-7a06-4c9d-9a7b-3496179616e7",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -954,7 +954,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "###Training and Testing data split"
+        "###Data split"
       ],
       "metadata": {
         "id": "qDexjFz7VM2x"
@@ -974,7 +974,7 @@
       ],
       "metadata": {
         "id": "o6QflLTZVRFi",
-        "outputId": "96535d49-4e08-4ff3-cddd-d94223678fb7",
+        "outputId": "41d2ead4-5ce1-4d22-d3af-9896ca7a5084",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1067,7 +1067,7 @@
       "metadata": {
         "id": "12lL6eO9dTZf"
       },
-      "execution_count": 22,
+      "execution_count": 20,
       "outputs": []
     },
     {
@@ -1081,7 +1081,7 @@
       "metadata": {
         "id": "Zs-QcNbjd0yb"
       },
-      "execution_count": 26,
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -1091,18 +1091,18 @@
       ],
       "metadata": {
         "id": "SbDVOfpLeiBg",
-        "outputId": "72a49e79-4391-41d4-b542-1a91232982ca",
+        "outputId": "e0a49368-9f3c-4e7c-acda-a9174a42dbc0",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 27,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "343 correct predictions out of 711. Accuracy 48.24%\n"
+            "350 correct predictions out of 711. Accuracy 49.23%\n"
           ]
         }
       ]
@@ -1118,18 +1118,18 @@
       ],
       "metadata": {
         "id": "bt7lZDIAfOMs",
-        "outputId": "4a98179a-b0cd-46b9-c4d2-8fcd6a7a2fd0",
+        "outputId": "4628a178-1c62-4ac2-b99e-7dd1bf3b7c4d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 28,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "442 correct predictions out of 711. Accuracy 62.17%\n"
+            "430 correct predictions out of 711. Accuracy 60.48%\n"
           ]
         }
       ]
@@ -1145,9 +1145,183 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "# Confustion matrix of the predict death classifier\n",
+        "predictions = run(predict_death, train_input)\n",
+        "confusion_matrix(train_labels, predictions)"
+      ],
+      "metadata": {
+        "id": "SJ-Uzakjf5Tl",
+        "outputId": "e238dda6-3b9f-4448-e955-5b242856ebae",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[430,   0],\n",
+              "       [281,   0]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 24
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# The precision is the “accuracy of the predicted positives.”\n",
+        "print(f\"The precision score of the predict_death classifier is {precision_score(train_labels, predictions, zero_division=False)}\")"
+      ],
+      "metadata": {
+        "id": "BYEqgeGLBHPI",
+        "outputId": "d6e54946-ff16-4cc9-f860-1b0a244849ba",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The precision score of the predict_death classifier is 0.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# The recall is the “accuracy of the actual positives.”\n",
+        "print(f\"The recall score of the predict_death classifier is {recall_score(train_labels, predictions)}\")"
+      ],
+      "metadata": {
+        "id": "r7la4jNDD1hB",
+        "outputId": "7cb7dd79-2a8b-4338-e9c4-2b6ebf064c68",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The recall score of the predict_death classifier is 0.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# The specificity is the “accuracy of the actual negatives.”\n",
+        "def specificity(matrix):\n",
+        "  return matrix[0][0] / (matrix[0][0] + matrix[0][1]) if (matrix[0][0] + matrix[0][1] > 0) else 0\n",
+        "\n",
+        "cm = confusion_matrix(train_labels, predictions)\n",
+        "print(f\"The specificity score of the predict_death classifier is {specificity(cm):.2f}\")"
+      ],
+      "metadata": {
+        "id": "tSyeBx8bFE6E",
+        "outputId": "739f8244-7654-4827-93d3-6fc49feab49b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The specificity score of the predict_death classifier is 1.00\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# The “negative predictive value” (NPV) is the “accuracy of the predicted negatives.”\n",
+        "def npv(matrix):\n",
+        "  return matrix[0][0] / (matrix[0][0] + matrix[1][0]) if (matrix[0][0] + matrix[1][0] > 0) else 0\n",
+        "\n",
+        "print(f\"The npv score of the predict_death classifier is {npv(cm):.2f}\")"
+      ],
+      "metadata": {
+        "id": "f_Nntq5FFf_I",
+        "outputId": "ae536757-db61-49bc-ee7f-01c3d8400f10",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The npv score of the predict_death classifier is 0.60\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# The scores of the random classifier\n",
+        "random_predictions = run(classify, train_input)\n",
+        "random_cm = confusion_matrix(train_labels, random_predictions)\n",
+        "\n",
+        "print(f\"The precision score of the random classifier is {precision_score(train_labels, random_predictions):.2f}\")\n",
+        "print(f\"The recall score of the random classifier is {recall_score(train_labels, random_predictions):.2f}\")\n",
+        "print(f\"The specificity score of the random classifier is {specificity (random_cm):.2f}\")\n",
+        "print(f\"The npv score of the random classifier is {npv(random_cm):.2f}\")"
+      ],
+      "metadata": {
+        "id": "GbSDSsa5Gsxp",
+        "outputId": "386deeed-7dce-4c2a-e87b-454b0373a26e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The precision score of the random classifier is 0.41\n",
+            "The recall score of the random classifier is 0.54\n",
+            "The specificity score of the random classifier is 0.49\n",
+            "The npv score of the random classifier is 0.62\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Hypocrite Classifier"
+      ],
+      "metadata": {
+        "id": "vx3XFGgGH-8t"
+      }
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "SJ-Uzakjf5Tl"
+        "id": "3yQmQ8RkHpMq"
       },
       "execution_count": null,
       "outputs": []
