--- a/machine-learning-bookcamp/5-model-deployment/model_deployment.ipynb
+++ b/machine-learning-bookcamp/5-model-deployment/model_deployment.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNkdx6ogQKSShIuCzCTcqBF",
+      "authorship_tag": "ABX9TyMpD2jfR9zw50ZFt4zhEbNr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -87,7 +87,7 @@
       ],
       "metadata": {
         "id": "bA6YUwP1c_KM",
-        "outputId": "806bacd5-ffc9-4aee-bc12-5ee55f497c12",
+        "outputId": "2823c9fc-5bf1-4c02-ec84-a93da7fe2877",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -154,7 +154,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "US7ds406eEwl",
-        "outputId": "ceafd0b7-f560-41fe-b755-f5e828b2f2d6"
+        "outputId": "00cdbb10-70bf-4eb4-ca44-af3379b7b24f"
       },
       "execution_count": 5,
       "outputs": [
@@ -223,7 +223,7 @@
       "metadata": {
         "id": "CPM1VXhp2jmc"
       },
-      "execution_count": 10,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -237,7 +237,7 @@
       "metadata": {
         "id": "jMF2Y3fq609Q"
       },
-      "execution_count": 12,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -250,7 +250,7 @@
       "metadata": {
         "id": "Q0pd3UeC7uwG"
       },
-      "execution_count": 13,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -263,7 +263,7 @@
       "metadata": {
         "id": "n_M-124_78Ae"
       },
-      "execution_count": 14,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -283,7 +283,7 @@
       "metadata": {
         "id": "-KciNwlaWnDb"
       },
-      "execution_count": 15,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -322,7 +322,7 @@
       "metadata": {
         "id": "t_5IDm2bYrEv"
       },
-      "execution_count": 21,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -340,12 +340,12 @@
       ],
       "metadata": {
         "id": "XQtBbsFDZuai",
-        "outputId": "d9a2012e-72c0-4424-ccee-cc24928c973d",
+        "outputId": "015d117e-89dc-4474-a674-38c0fb09cb6f",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 22,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -376,9 +376,109 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "customer = {\n",
+        "    'customerid': '8879-zkjof',\n",
+        "    'gender': 'female',\n",
+        "    'seniorcitizen': 0,\n",
+        "    'partner': 'no',\n",
+        "    'dependents': 'no',\n",
+        "    'tenure': 41,\n",
+        "    'phoneservice': 'yes',\n",
+        "    'multiplelines': 'no',\n",
+        "    'internetservice': 'dsl',\n",
+        "    'onlinesecurity': 'yes',\n",
+        "    'onlinebackup': 'no',\n",
+        "    'deviceprotection': 'yes',\n",
+        "    'techsupport': 'yes',\n",
+        "    'streamingtv': 'yes',\n",
+        "    'streamingmovies': 'yes',\n",
+        "    'contract': 'one_year',\n",
+        "    'paperlessbilling': 'yes',\n",
+        "    'paymentmethod': 'bank_transfer_(automatic)',\n",
+        "    'monthlycharges': 79.85,\n",
+        "    'totalcharges': 3320.75\n",
+        "}\n",
+        "\n",
+        "df = pd.DataFrame([customer])\n",
+        "y_pred = predict(df, dv, model)\n",
+        "y_pred[0]"
+      ],
+      "metadata": {
+        "id": "4icADesd3dSw",
+        "outputId": "bb97ecdf-9eb9-4833-e1ba-c0e813046436",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.061875685940780745"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 16
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def predict_single(customer, dv, model):\n",
+        "  X = dv.transform([customer])\n",
+        "  y_pred = model.predict_proba(X)[:, 1]\n",
+        "  return y_pred[0]"
+      ],
+      "metadata": {
+        "id": "ajk8TndtcVx2"
+      },
+      "execution_count": 17,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "predict_single(customer, dv, model)"
+      ],
+      "metadata": {
+        "id": "DmtOpgd-c9X0",
+        "outputId": "390b7200-45ca-4f07-a792-940151d6bbe3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.061875685940780745"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 18
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Save model"
+      ],
+      "metadata": {
+        "id": "sHdMTm7JdQJs"
+      }
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "4icADesd3dSw"
+        "id": "iFdNnY-5dSgd"
       },
       "execution_count": null,
       "outputs": []
