--- a/machine-learning-bookcamp/5-model-deployment/model_deployment.ipynb
+++ b/machine-learning-bookcamp/5-model-deployment/model_deployment.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMpD2jfR9zw50ZFt4zhEbNr",
+      "authorship_tag": "ABX9TyM/sZJGe1hpxOoYl6Jcb54t",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -87,7 +87,7 @@
       ],
       "metadata": {
         "id": "bA6YUwP1c_KM",
-        "outputId": "2823c9fc-5bf1-4c02-ec84-a93da7fe2877",
+        "outputId": "9db8e997-694e-4d4c-8182-05cfe929b9ad",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -154,7 +154,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "US7ds406eEwl",
-        "outputId": "00cdbb10-70bf-4eb4-ca44-af3379b7b24f"
+        "outputId": "a8c83fe0-1bad-45b8-8a15-ca71d1b4a22e"
       },
       "execution_count": 5,
       "outputs": [
@@ -340,7 +340,7 @@
       ],
       "metadata": {
         "id": "XQtBbsFDZuai",
-        "outputId": "015d117e-89dc-4474-a674-38c0fb09cb6f",
+        "outputId": "d362cd05-d023-4d71-937e-467e5a30a921",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -406,7 +406,7 @@
       ],
       "metadata": {
         "id": "4icADesd3dSw",
-        "outputId": "bb97ecdf-9eb9-4833-e1ba-c0e813046436",
+        "outputId": "463afad7-935e-4335-f019-0e7313528c55",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -446,7 +446,7 @@
       ],
       "metadata": {
         "id": "DmtOpgd-c9X0",
-        "outputId": "390b7200-45ca-4f07-a792-940151d6bbe3",
+        "outputId": "182c075d-e570-4914-df0d-7a39d6ec60b7",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -476,12 +476,114 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# let's save the model using Pickle module\n",
+        "with open(\"churn-model.bin\", \"wb\") as f_out:\n",
+        "  pickle.dump(model, f_out)"
+      ],
       "metadata": {
         "id": "iFdNnY-5dSgd"
       },
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "In our case, however, saving just the model is not enough: we also have a DictVectorizer that we “trained” together with the model. \n",
+        "\n",
+        "We need to save both."
+      ],
+      "metadata": {
+        "id": "r8kFvIv52YMH"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# let's save the model using Pickle module\n",
+        "with open(\"churn-model.bin\", \"wb\") as f_out:\n",
+        "  pickle.dump((dv, model), f_out)"
+      ],
+      "metadata": {
+        "id": "3EnFDNWw2ayr"
+      },
+      "execution_count": 20,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Load model"
+      ],
+      "metadata": {
+        "id": "SiRenZ1V5GQq"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Let's load the saved model\n",
+        "with open(\"churn-model.bin\", \"rb\") as f_in:\n",
+        "  dv, model = pickle.load(f_in)"
+      ],
+      "metadata": {
+        "id": "-oOEC2EC3ARn"
+      },
+      "execution_count": 21,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# And apply it\n",
+        "prediction = predict_single(customer, dv, model)\n",
+        "print(f\"prediction: {prediction:.3f}\")"
+      ],
+      "metadata": {
+        "id": "bwZJ1Wvv5Rek",
+        "outputId": "fa0f254d-2e3a-4a9a-b28c-f99bad1151b5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "prediction: 0.062\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# let’s display the results\n",
+        "if prediction >= 0.5:\n",
+        "  print(\"verdict: Churn\")\n",
+        "else:\n",
+        "  print(\"verdict: No Churn\")"
+      ],
+      "metadata": {
+        "id": "gvYRjBTp6hvO",
+        "outputId": "49e547c0-415b-4599-e038-a93876770cc5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "verdict: No Churn\n"
+          ]
+        }
+      ]
     }
   ]
 }
